--- a/src/main/resources/templates/desktop.html
+++ b/src/main/resources/templates/desktop.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>desktop</title>
-    <link rel="stylesheet" th:href="@{/desktopcss.css}">
+    <link rel="stylesheet" th:href="@{desktopcss.css}">
 </head>
 <body>
 
@@ -12,6 +12,7 @@
     <a href="#">Opret bil</a>
     <a href="#">Skade registrering</a>
     <a href="#">Rapport</a>
+    <a href="#">Økonomi</a>
     <a href="#">Login</a>
 </div>
 
