--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,6 +16,12 @@
     <button type="submit">Login</button>
   </form>
 
+  <div class="link">
+    <a th:href="@{/createAccount}">
+      Opret bruger her
+    </a>
+  </div>
+
 </div>
 
 
