--- a/src/main/resources/templates/rapport.html
+++ b/src/main/resources/templates/rapport.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>desktop</title>
-    <link rel="stylesheet" th:href="@{desktopcss.css}">
+  <meta charset="UTF-8">
+  <title>rapport</title>
+    <link rel="stylesheet" th:href="@{rapportcss.css}">
 </head>
 <body>
-
 <div class="sidebar">
     <h2 class="menu-title">Menu</h2>
     <a th:href="@{/opretBil}">Opret bil</a>
@@ -15,6 +14,7 @@
     <a th:href= "@{/economy}"> Økonomi</a>
     <a th:href="@{/login}">Login</a>
 </div>
+
 
 </body>
 </html>
