--- a/src/main/resources/templates/economy.html
+++ b/src/main/resources/templates/economy.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>desktop</title>
-    <link rel="stylesheet" th:href="@{desktopcss.css}">
+    <title>economy</title>
+    <link rel="stylesheet" th:href="@{economycss.css}">
 </head>
 <body>
 
@@ -15,6 +15,7 @@
     <a th:href= "@{/economy}"> Økonomi</a>
     <a th:href="@{/login}">Login</a>
 </div>
+
 
 </body>
 </html>
