--- a/src/main/resources/templates/opretBil.html
+++ b/src/main/resources/templates/opretBil.html
@@ -2,11 +2,10 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>desktop</title>
-    <link rel="stylesheet" th:href="@{desktopcss.css}">
+    <title>opretBil</title>
+    <link rel="stylesheet" th:href="@{opretBilcss.css}">
 </head>
 <body>
-
 <div class="sidebar">
     <h2 class="menu-title">Menu</h2>
     <a th:href="@{/opretBil}">Opret bil</a>
@@ -15,6 +14,7 @@
     <a th:href= "@{/economy}"> Økonomi</a>
     <a th:href="@{/login}">Login</a>
 </div>
+
 
 </body>
 </html>
