--- a/src/main/resources/templates/createAccount.html
+++ b/src/main/resources/templates/createAccount.html
@@ -7,18 +7,9 @@
 </head>
 <body>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>createAccount</title>
-    <link rel="stylesheet" href="createaccountcss.css">
-</head>
-<body>
-
 <div class="create-account-box">
     <h2>Opret bruger</h2>
-    <form action="/create-account" method="post">
+    <form action="/createAccount" method="post">
         <input type="text" name="firstname" placeholder="Navn" required>
         <input type="text" name="lastname" placeholder="Efternavn" required>
         <input type="text" name="username" placeholder="Brugernavn" required>
@@ -41,5 +32,3 @@
 </body>
 </html>
 
-</body>
-</html>
