--- a/src/main/resources/templates/desktop.html
+++ b/src/main/resources/templates/desktop.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 
+
 <div class="sidebar">
     <h2 class="menu-title">Menu</h2>
     <a th:href="@{/opretBil}">Opret bil</a>
@@ -14,6 +15,11 @@
     <a th:href="@{/rapport}">Rapport</a>
     <a th:href= "@{/economy}"> Økonomi</a>
     <a th:href="@{/login}">Login</a>
+
+
+    <div class="user-info">
+        <h1>Velkommen, <span th:text="${user != null ? user.name : 'Guest'}">User</span></h1>
+    </div>
 </div>
 
 </body>
