--- a/src/main/resources/templates/desktop.html
+++ b/src/main/resources/templates/desktop.html
@@ -14,11 +14,12 @@
     <a th:href="@{/skadeRegister}">Skade registrering</a>
     <a th:href="@{/rapport}">Rapport</a>
     <a th:href= "@{/economy}"> Økonomi</a>
-    <a th:href="@{/login}">Login</a>
+    <a th:if="${user == null}" th:href="@{/login}">Login</a>
+    <a th:if="${user != null}" th:href="@{/logout}">Logout</a>
 
 
     <div class="user-info">
-        <h1>Velkommen, <span th:text="${user != null ? user.name : 'Guest'}">User</span></h1>
+        <h1>Velkommen, <span th:text="${user != null ? user.name : 'Gæst'}">User</span></h1>
     </div>
 </div>
 
