--- a/src/main/resources/templates/economy.html
+++ b/src/main/resources/templates/economy.html
@@ -13,7 +13,8 @@
     <a th:href="@{/skadeRegister}">Skade registrering</a>
     <a th:href="@{/rapport}">Rapport</a>
     <a th:href= "@{/economy}"> Økonomi</a>
-    <a th:href="@{/login}">Login</a>
+    <a th:if="${user == null}" th:href="@{/login}">Login</a>
+    <a th:if="${user != null}" th:href="@{/logout}">Logout</a>
 
     <div class="user-info">
         <h1>Velkommen, <span th:text="${user != null ? user.name : 'Guest'}">User</span></h1>
