--- a/src/main/resources/static/rapportcss.css
+++ b/src/main/resources/static/rapportcss.css
@@ -1,6 +1,12 @@
+*{
+    box-sizing: border-box;
+}
+
 body {
+    front-family: Consolas, sans-serif;
+    background-color: #f4f4f4;
     margin: 0;
-    font-family: Consolas, sans-serif;
+    display: flex;
 }
 
 .sidebar {
@@ -40,4 +46,84 @@ body {
     background-color: #d3d3d3;
     text-align: center;
     font-size: 10px;
+}
+
+.main-content {
+    justify-content: center;
+    align-items: center;
+    margin-left: 1000px;
+    padding: 40px;
+    width: 100%;
+}
+
+h1 {
+    font-size: 24px;
+    color: #333;
+    margin-bottom: 20px;
+}
+
+form {
+    background-color: #d3d3d3;
+    padding: 20px 30px;
+    border-radius: 8px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    width: 500px;
+    max-width: 100%;
+}
+
+label {
+    font-size: 14px;
+    color: #333;
+    display: block;
+    margin-bottom: 5px;
+}
+
+input[type="text"],
+textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: none;
+    border-radius: 4px;
+    font-family: Consolas, sans-serif;
+    font-size: 14px;
+}
+
+button {
+    width: 100%;
+    padding: 12px;
+    background-color: #bbb;
+    color: #333;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    font-family: Consolas, sans-serif;
+}
+
+button:hover {
+    background-color: #a9a9a9;
+}
+
+
+ul {
+    margin-top: 30px;
+    padding-left: 0;
+    list-style: none;
+    max-width: 500px;
+}
+
+ul li {
+    background-color: #e6e6e6;
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 4px;
+}
+
+ul li strong {
+    display: block;
+    color: #222;
+    font-size: 15px;
+    margin-bottom: 5px;
 }
