--- a/src/main/resources/templates/rapport.html
+++ b/src/main/resources/templates/rapport.html
@@ -2,26 +2,43 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>rapport</title>
+  <title>Opret Rapport</title>
     <link rel="stylesheet" th:href="@{rapportcss.css}">
 </head>
-<body>
-<div class="sidebar">
-    <h2 class="menu-title">Menu</h2>
-    <a th:href="@{/opretBil}">Opret bil</a>
-    <a th:href="@{/opretKunde}">Opret Kunde</a>
-    <a th:href="@{/skadeRegister}">Skade registrering</a>
-    <a th:href="@{/rapport}">Rapport</a>
-    <a th:href= "@{/economy}"> Økonomi</a>
-    <a th:if="${user == null}" th:href="@{/login}">Login</a>
-    <a th:if="${user != null}" th:href="@{/logout}">Logout</a>
+    <body>
+        <div class="sidebar">
+            <h2 class="menu-title">Menu</h2>
+            <a th:href="@{/opretBil}">Opret bil</a>
+            <a th:href="@{/skadeRegister}">Skade registrering</a>
+            <a th:href="@{/rapport}">Rapport</a>
+            <a th:href= "@{/economy}"> Økonomi</a>
+            <a th:if="${user == null}" th:href="@{/login}">Login</a>
+            <a th:if="${user != null}" th:href="@{/logout}">Logout</a>
 
+            <div class="user-info">
+                <h1>Velkommen, <span th:text="${user != null ? user.name : 'Gæst'}">User</span></h1>
+            </div>
 
-    <div class="user-info">
-        <h1>Velkommen, <span th:text="${user != null ? user.name : 'Gæst'}">User</span></h1>
-    </div>
-</div>
+        </div>
 
+        <div class="main-content">
+            <h1>Opret en ny rapport</h1>
+            <form th:action="@{/rapport}" th:object="${rapport}" method="post">
+                <label for="titel">Titel:</label><br/>
+                <input type="text" th:field="*{titel}" id="titel" /><br/><br/>
 
-</body>
+                <label for="beskrivelse">Indhold:</label><br/>
+                <textarea th:field="*{beskrivelse}" id="beskrivelse" rows="10" cols="50"></textarea><br/><br/>
+
+                <button type="submit">Gem</button>
+            </form>
+
+            <h2>Gemte rapporter</h2>
+            <ul>
+                <li th:each="r : ${rapporter}">
+                    <strong th:text="${r.titel}"></strong>: <span th:text="${r.beskrivelse}"></span>
+                </li>
+            </ul>
+        </div>
+    </body>
 </html>
