--- a/src/main/resources/templates/desktop.html
+++ b/src/main/resources/templates/desktop.html
@@ -15,6 +15,7 @@
     <a th:href="@{/skadeRegister}">Skade registrering</a>
     <a th:href="@{/rapport}">Rapport</a>
     <a th:href= "@{/economy}"> Økonomi</a>
+    <a th:href= "@{/forhaandsaftale}"> Forhåndsaftale</a>
     <a th:if="${user == null}" th:href="@{/login}">Login</a>
     <a th:if="${user != null}" th:href="@{/logout}">Logout</a>
 
