--- a/src/main/resources/templates/rapport.html
+++ b/src/main/resources/templates/rapport.html
@@ -6,14 +6,18 @@
     <link rel="stylesheet" th:href="@{/rapportcss.css}">
 </head>
 <body>
+
 <div class="sidebar">
     <h2 class="menu-title">Menu</h2>
     <a th:href="@{/opretBil}">Opret bil</a>
+    <a th:href="@{/opretKunde}">Opret Kunde</a>
     <a th:href="@{/skadeRegister}">Skade registrering</a>
     <a th:href="@{/rapport}">Rapport</a>
-    <a th:href="@{/economy}">Økonomi</a>
+    <a th:href= "@{/economy}"> Økonomi</a>
+    <a th:href= "@{/forhaandsaftale}"> Forhåndsaftale</a>
     <a th:if="${user == null}" th:href="@{/login}">Login</a>
     <a th:if="${user != null}" th:href="@{/logout}">Logout</a>
+
 
     <div class="user-info">
         <h1>Velkommen, <span th:text="${user != null ? user.name : 'Gæst'}">User</span></h1>
