--- a/src/main/resources/templates/skadeRegister.html
+++ b/src/main/resources/templates/skadeRegister.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" th:href="@{/skadeRegistercss.css}">
 </head>
 <body>
+
 <div class="sidebar">
     <h2 class="menu-title">Menu</h2>
     <a th:href="@{/opretBil}">Opret bil</a>
@@ -13,6 +14,7 @@
     <a th:href="@{/skadeRegister}">Skade registrering</a>
     <a th:href="@{/rapport}">Rapport</a>
     <a th:href= "@{/economy}"> Økonomi</a>
+    <a th:href= "@{/forhaandsaftale}"> Forhåndsaftale</a>
     <a th:if="${user == null}" th:href="@{/login}">Login</a>
     <a th:if="${user != null}" th:href="@{/logout}">Logout</a>
 
@@ -21,7 +23,6 @@
         <h1>Velkommen, <span th:text="${user != null ? user.name : 'Gæst'}">User</span></h1>
     </div>
 </div>
-
 <div class="main-content">
     <div class="form-box">
         <h2>Registrer en skade</h2>
