--- a/src/main/resources/templates/economy.html
+++ b/src/main/resources/templates/economy.html
@@ -16,6 +16,7 @@
     <a th:href="@{/rapport}">Rapport</a>
     <a th:href= "@{/economy}"> Økonomi</a>
     <a th:href= "@{/forhaandsaftale}"> Forhåndsaftale</a>
+    <a th:href="@{/tilbagelevering}">Tilbagelevering</a>
     <a th:if="${user == null}" th:href="@{/login}">Login</a>
     <a th:if="${user != null}" th:href="@{/logout}">Logout</a>
 
