--- a/src/main/resources/templates/opretBil.html
+++ b/src/main/resources/templates/opretBil.html
@@ -16,6 +16,7 @@
     <a th:href="@{/rapport}">Rapport</a>
     <a th:href= "@{/economy}"> Økonomi</a>
     <a th:href= "@{/forhaandsaftale}"> Forhåndsaftale</a>
+    <a th:href="@{/tilbagelevering}">Tilbagelevering</a>
     <a th:if="${user == null}" th:href="@{/login}">Login</a>
     <a th:if="${user != null}" th:href="@{/logout}">Logout</a>
 
@@ -37,6 +38,8 @@
             <input type="text" th:field="*{color}" placeholder="Farve" required>
             <input type="text" th:field="*{licensePlate}" placeholder="Nummerplade" required>
             <input type="text" th:field="*{carImageUrl}" placeholder="Billede URL">
+            <input type="number" th:field="*{price}" placeholder="Pris Per måned (DKK)" step="0.01" required>
+
 
 
             <!-- lig i opret kunde
@@ -89,15 +92,15 @@
     </div>
 </div>
 
-    <script>
-        // Billed-preview når brugeren indtaster URL
-        document.getElementById('carImageUrlInput').addEventListener('input', function () {
-            const img = document.getElementById('imagePreview');
-            const url = this.value;
-            img.src = url;
-            img.style.display = url ? 'block' : 'none';
-        });
-    </script>
+<!--    <script>-->
+<!--        // Billed-preview når brugeren indtaster URL-->
+<!--        document.getElementById('carImageUrlInput').addEventListener('input', function () {-->
+<!--            const img = document.getElementById('imagePreview');-->
+<!--            const url = this.value;-->
+<!--            img.src = url;-->
+<!--            img.style.display = url ? 'block' : 'none';-->
+<!--        });-->
+<!--    </script>-->
 
 
 
