--- a/src/main/resources/static/desktopcss.css
+++ b/src/main/resources/static/desktopcss.css
@@ -41,3 +41,57 @@ body {
     text-align: center;
     font-size: 10px;
 }
+
+.car-display {
+    width: 750px;
+    flex: 1;
+    padding-bottom: 400px;
+    margin-left: 20%;
+}
+
+.car-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+
+.car-card {
+    background-color: #e0e0e0;
+    border-radius: 8px;
+    padding: 15px;
+    box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.1);
+    font-family: Consolas, sans-serif;
+}
+
+.car-card p {
+    margin: 5px 0;
+    font-size: 14px;
+    color: #333;
+}
+
+.car-img {
+    width: 100%;
+    max-height: 150px;
+    object-fit: cover;
+    border-radius: 6px;
+    margin-bottom: 10px;
+}
+
+.rented-summary {
+    margin-left: 20%;
+    padding: 15px;
+    background-color: #f4f4f4;
+    border: 1px solid #ccc;
+    width: 720px;
+    border-radius: 8px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    font-family: Consolas, sans-serif;
+    box-shadow: 1px 1px 6px rgba(0,0,0,0.1);
+}
+
+.rented-summary h2 {
+    margin: 0;
+    color: #222;
+    font-size: 20px;
+}
