--- a/src/main/resources/templates/desktop.html
+++ b/src/main/resources/templates/desktop.html
@@ -10,6 +10,7 @@
 
 <div class="sidebar">
     <h2 class="menu-title">Menu</h2>
+    <a th:href="@{/desktop}">Overblik</a>
     <a th:href="@{/opretBil}">Opret bil</a>
     <a th:href="@{/opretKunde}">Opret Kunde</a>
     <a th:href="@{/skadeRegister}">Skade registrering</a>
@@ -23,6 +24,27 @@
 
     <div class="user-info">
         <h1>Velkommen, <span th:text="${user != null ? user.name : 'Gæst'}">User</span></h1>
+    </div>
+</div>
+
+<div class="rented-summary">
+    <h2>Samlet pris for udlejede biler:
+        <span th:text="${totalRentedPrice} + ' kr.'"></span>
+    </h2>
+</div>
+
+<div class="car-display">
+    <h2>Eksisterende Biler</h2>
+    <div class="car-list">
+        <div class="car-card" th:each="car : ${cars}">
+            <img th:src="${car.carImageUrl}" alt="Bil billede" class="car-img" onerror="this.style.display='none'">
+            <p><strong>Mærke:</strong> <span th:text="${car.brand}"></span></p>
+            <p><strong>Model:</strong> <span th:text="${car.model}"></span></p>
+            <p><strong>Farve:</strong> <span th:text="${car.color}"></span></p>
+            <p><strong>Nummerplade:</strong> <span th:text="${car.licensePlate}"></span></p>
+            <p><strong>Status:</strong> <span th:text="${car.availability}"></span></p>
+
+        </div>
     </div>
 </div>
 
