--- a/src/main/resources/templates/skadeRegister.html
+++ b/src/main/resources/templates/skadeRegister.html
@@ -9,6 +9,7 @@
 
 <div class="sidebar">
     <h2 class="menu-title">Menu</h2>
+    <a th:href="@{/desktop}">Overblik</a>
     <a th:href="@{/opretBil}">Opret bil</a>
     <a th:href="@{/opretKunde}">Opret Kunde</a>
     <a th:href="@{/skadeRegister}">Skade registrering</a>
