--- a/src/main/resources/templates/desktop.html
+++ b/src/main/resources/templates/desktop.html
@@ -10,7 +10,7 @@
 
 <div class="sidebar">
     <h2 class="menu-title">Menu</h2>
-    <a th:href="@{/desktop}">Overblik</a>
+    <a th:href="@{/}">Overblik</a>
     <a th:href="@{/opretBil}">Opret bil</a>
     <a th:href="@{/opretKunde}">Opret Kunde</a>
     <a th:href="@{/skadeRegister}">Skade registrering</a>
@@ -27,10 +27,12 @@
     </div>
 </div>
 
-<div class="rented-summary">
-    <h2>Samlet pris for udlejede biler:
-        <span th:text="${totalRentedPrice} + ' kr.'"></span>
-    </h2>
+<div class="rented-summary-container">
+    <div class="rented-summary">
+        <h2>Samlet pris for udlejede biler:
+            <span th:text="${totalRentedPrice} + ' kr.'"></span>
+        </h2>
+    </div>
 </div>
 
 <div class="car-display">
