--- a/src/main/resources/templates/tilbageLevering.html
+++ b/src/main/resources/templates/tilbageLevering.html
@@ -8,7 +8,7 @@
 <body>
 <div class="sidebar">
     <h2 class="menu-title">Menu</h2>
-    <a th:href="@{/desktop}">Overblik</a>
+    <a th:href="@{/}">Overblik</a>
     <a th:href="@{/opretBil}">Opret bil</a>
     <a th:href="@{/opretKunde}">Opret Kunde</a>
     <a th:href="@{/skadeRegister}">Skade registrering</a>
