--- a/src/main/resources/templates/skadeRegister.html
+++ b/src/main/resources/templates/skadeRegister.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Sakde Registrering</title>
+    <title>Skade Registrering</title>
     <link rel="stylesheet" th:href="@{/skadeRegistercss.css}">
 </head>
 <body>
@@ -14,16 +14,16 @@
     <a th:href="@{/opretKunde}">Opret Kunde</a>
     <a th:href="@{/skadeRegister}">Skade registrering</a>
     <a th:href="@{/rapport}">Rapport</a>
-    <a th:href= "@{/forhaandsaftale}"> Forhåndsaftale</a>
+    <a th:href="@{/forhaandsaftale}">Forhåndsaftale</a>
     <a th:href="@{/tilbagelevering}">Tilbagelevering</a>
     <a th:if="${user == null}" th:href="@{/login}">Login</a>
     <a th:if="${user != null}" th:href="@{/logout}">Logout</a>
-
 
     <div class="user-info">
         <h1>Velkommen, <span th:text="${user != null ? user.name : 'Gæst'}">User</span></h1>
     </div>
 </div>
+
 <div class="main-content">
     <div class="form-box">
         <h2>Registrer en skade</h2>
@@ -44,7 +44,10 @@
             <label>Vælg bil:</label>
             <select th:field="*{car}" required>
                 <option value="" disabled selected>Vælg bil</option>
-                <option th:each="c : ${cars}" th:value="${c.id}" th:text="${c.brand + ' ' + c.model + ' (' + c.licensePlate + ')'}"></option>
+                <option th:each="c : ${cars}"
+                        th:value="${c.id}"
+                        th:text="${c.brand + ' ' + c.model + ' (' + c.licensePlate + ')'}">
+                </option>
             </select>
 
             <button type="submit">Gem Skade</button>
