--- a/src/main/resources/static/skadeRegistercss.css
+++ b/src/main/resources/static/skadeRegistercss.css
@@ -48,6 +48,11 @@ body {
     padding: 0.625rem;
     background-color: #d3d3d3;
 }
+.user-info h1 {
+    color: #000;
+    font-family: Consolas, sans-serif;
+    font-size: 1.1rem;
+}
 
 .main-content {
     margin-left: 13.75rem;
