--- a/src/main/resources/static/tilbageLeveringcss.css
+++ b/src/main/resources/static/tilbageLeveringcss.css
@@ -1,11 +1,12 @@
-body {
-    margin: 0;
-    font-family: Consolas, sans-serif;
-    background-color: #f4f4f4;
-}
-
 * {
     box-sizing: border-box;
+}
+
+body {
+    font-family: Consolas, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    display: flex;
 }
 
 .sidebar {
@@ -13,7 +14,7 @@ body {
     left: 0;
     top: 0;
     width: 12.5rem;
-    height: 100%;
+    height: 100vh;
     background-color: #d3d3d3;
     padding-top: 1.25rem;
     box-shadow: 0.125rem 0 0.3125rem rgba(0, 0, 0, 0.1);
@@ -39,14 +40,19 @@ body {
 }
 
 .user-info {
-    margin-top: auto;
-    padding: 0.9375rem;
-    padding-top: 10.9375rem;
-    background-color: #d3d3d3;
+    position: absolute;
+    bottom: 1.25rem;
+    width: 100%;
     text-align: center;
-    font-size: 0.625rem;
+    font-size: 0.75rem;
+    padding: 0.625rem;
+    background-color: #d3d3d3;
 }
-
+.user-info h1 {
+    color: #000;
+    font-family: Consolas, sans-serif;
+    font-size: 1.1rem;
+}
 .main-content {
     display: flex;
     margin-left: 12.5rem;
